--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -5,7 +5,7 @@
 
 /* applies to any <p> descendants of an element of class "example-class-selector" */
 .example-class-selector p {
-	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
+	/* Colors are in hexadecimal: http://www.colorpicker.com/ */
 	color: #CC00AA;
 }
 
@@ -30,5 +30,32 @@ body {
      bottom: 0;
      right: 0;
      position: absolute;
-     z-index: -1;	
+     z-index: -1;
 }
+
+
+
+img .thumbnail {
+	width: 50px;
+	height: 100px;
+	border: 1px solid #434343;
+}
+
+.contact-info {
+	font-size: 10pt;
+	color: #cccccc
+}
+
+
+
+/*#project1{
+	margin-left: 20px;
+	background-color: #DEEBF7;
+	padding: 20px;
+	width: 525px;
+}*/
+
+/*.project{
+	background-color: gray;
+	margin-left: 10px
+}*/
